# Copyright © Stephan Kunz
[package]
resolver = "3"
name = "behaviortree"
version = "0.2.0"
edition = "2024"
license-file = "LICENSE"
authors = ["stepkun <stephan.kunz@kabelbw.de>"]
description = "A BehaviorTree library"
rust-version = "1.86.0"
repository = "https://github.com/stepkun/behaviortree.git"
homepage = "http://github.com/stepkun/behaviortree.git"
documentation = "https://docs.rs/behaviortree/"
readme = "README.md"
exclude = [
    "laze*",
    "benches/**",
    "embedded/**",
    "examples/**",
    "tests/**",
]

[lib]
name = "behaviortree"

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
#unused="allow" # for dev only

[lints.rustdoc]
private_intra_doc_links = "allow"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[[bench]]
name = "factory"
harness = false

[[bench]]
name = "fallback"
harness = false

[[bench]]
name = "parallel"
harness = false

[[bench]]
name = "sequence"
harness = false

[[bench]]
name = "tree"
harness = false

[dependencies]
behaviortree-derive = { path = "derive", version = "0.2.0"}
async-trait = { version = "0.1.88", default-features = false }
bytes = { version = "1.10.1", default-features = false }
libloading = { version = "0.8.8", default-features = false, optional = true }
nanoserde = { version = "0.2.1", default-features = false, features=["json"] }
rand = { version = "0.9.2", optional = true }
roxmltree = { version = "0.20.0", default-features = false, features=["positions"] }
spin = { version = "0.10.0", default-features = false }
thiserror = { version = "2", default-features = false }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync", "time"], optional = true }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }
tinyscript = { version = "^0.1.4", default-features = false }
uuid = { version = "1.18.0", default-features = false , features = ["v4"]}
woxml = { version = "0.3.0", default-features = false }
zeromq = { version = "0.4.1", default-features = false, features = ["tcp-transport"], optional = true }

[build-dependencies]

[dev-dependencies]
criterion = "0.7.0"
rstest = "0.26.1"
trybuild = { version = "1.0.110", features = ["diff"] }

[features]
default = ["std"]
std = ["libloading", "roxmltree/std", "rand", "spin/std", "tokio", "zeromq", "zeromq/tokio-runtime"]

[profile.release]
opt-level = 's'			# Optimize for size.
lto = true				# Enable Link Time Optimisation
codegen-units = 1		# Reduced to increase optimisations
overflow-checks = true	# useful

[profile.production]
inherits="release"
panic = 'abort'		    # Abort on panic
strip = "symbols"	    # Strip symbols from binary

[profile.samply]
inherits = "release"
debug = true		    # Create debug symbols for profiling
