# Copyright © 2025 Stephan Kunz
[package]
resolver = "3"
name = "behaviortree-derive"
authors = ["stepkun <stephan.kunz@kabelbw.de>"]
description = "Derive macros for behaviortree"
edition = "2024"
version = "0.1.0"
rust-version = "1.86.0"
#license = "NGMC"
license-file = "LICENSE"
repository = "https://github.com/stepkun/behaviortree.git"
documentation = "https://docs.rs/behaviortree-derive/latest/behaviortree-derive/"
readme = "README.md"
exclude = [
    "benches/**",
    "examples/**",
    "tests/**",
]

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/all.rs"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "visit-mut"] }

[build-dependencies]

[dev-dependencies]
behaviortree = { path = "../" }
trybuild = { version = "1.0.110", features = ["diff"] }

[lints]
workspace = true
