# Copyright © 2025 Stephan Kunz
[package]
resolver = "3"
name = "behaviortree-derive"
authors = ["stepkun <stephan.kunz@kabelbw.de>"]
description = "Derive macros for behaviortree"
edition = "2024"
version = "0.4.0"
rust-version = "1.88.0"
#license = "NGMC"
license-file = "LICENSE"
repository = "https://github.com/stepkun/behaviortree.git"
documentation = "https://docs.rs/behaviortree-derive/latest/behaviortree-derive/"
readme = "README.md"
exclude = ["laze*", "benches/**", "embedded/**", "examples/**", "tests/**"]

[lib]
proc-macro = true

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(context, values(any()))',
] }
unsafe_code = "warn"
unused_must_use = "warn"

[lints.rustdoc]
private_intra_doc_links = "allow"

[lints.clippy]
enum_glob_use = "deny"
expect_used = "deny"
nursery = { level = "deny", priority = -1 }
panic = "deny"
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"

[[test]]
name = "tests"
path = "tests/all.rs"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "visit-mut"] }
deluxe = "0.5"

[build-dependencies]

[dev-dependencies]
async-trait = "0.1.88"
behaviortree = { path = "../" }
trybuild = { version = "1.0.110", features = ["diff"] }
