# Copyright © 2025 Stephan Kunz
[package]
name = "t05_crossdoor"
edition = "2024"
license = "MIT/Apache-2.0"
authors = ["stepkun <stephan.kunz@kabelbw.de>"]

publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(context, values(any()))',
] }
unsafe_code = "warn"
missing_docs = "warn"
#unused="allow" # for dev only

[lints.rustdoc]
private_intra_doc_links = "allow"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[dependencies]
ariel-os = { path = "../../build/imports/ariel-os/src/ariel-os", features = [
    "time",
] }
ariel-os-boards = { path = "../../build/imports/ariel-os/src/ariel-os-boards" }
async-trait = { version = "0.1.89", default-features = false }
behaviortree = { path = "../..", default-features = false, features = [
    "fallback",
    "inverter",
    "retry_until_successful",
    "sequence",
    "simple_behavior",
] }
spin = { version = "0.10.0", default-features = false }
